[gd_scene load_steps=2 format=3 uid="uid://bxc8p2hqgty7k"]

[ext_resource type="Script" path="res://leaderboard.gd" id="1_leaderboard"]

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_leaderboard")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "LEADERBOARD"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RefreshButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Refresh"
theme_override_font_sizes/font_size = 20

[node name="SubmitScoreButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Submit Current Score"
theme_override_font_sizes/font_size = 20

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeaderboardList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoadingLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Loading leaderboard..."
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Game"
theme_override_font_sizes/font_size = 24

[connection signal="pressed" from="VBoxContainer/ButtonContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/SubmitScoreButton" to="." method="_on_submit_score_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"] 
